// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> Input style snapshots renders correctly 1`] = `
.c3 {
  outline: none;
  border: none;
  background-color: transparent;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  box-sizing: border-box;
  font-size: inherit;
  max-width: 100%;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c3::-moz-placeholder {
  color: #bfbfbf;
}

.c3:-ms-input-placeholder {
  color: #bfbfbf;
}

.c3::placeholder {
  color: #bfbfbf;
}

.c3::-ms-clear,
.c3::-ms-reveal {
  display: none;
}

.c4 {
  font-size: 12px;
  box-sizing: border-box;
  line-height: 10px;
  padding-left: 16px;
  padding-top: 6px;
  color: #8c8c8c;
  height: 16px;
}

.c1 {
  width: 100%;
  height: 56px;
  box-sizing: border-box;
  background-color: #f2f2f2;
  font-size: 16px;
  color: #000000;
  padding: 0 16px;
  border: 1px solid #f2f2f2;
  border-radius: 2px;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: block;
  width: 100%;
  position: relative;
  outline: none;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`<Input> Input style snapshots renders correctly when disabled 1`] = `
.c3 {
  outline: none;
  border: none;
  background-color: transparent;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  box-sizing: border-box;
  font-size: inherit;
  max-width: 100%;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c3::-moz-placeholder {
  color: #bfbfbf;
}

.c3:-ms-input-placeholder {
  color: #bfbfbf;
}

.c3::placeholder {
  color: #bfbfbf;
}

.c3::-ms-clear,
.c3::-ms-reveal {
  display: none;
}

.c4 {
  font-size: 12px;
  box-sizing: border-box;
  line-height: 10px;
  padding-left: 16px;
  padding-top: 6px;
  color: #8c8c8c;
  height: 16px;
}

.c1 {
  width: 100%;
  height: 56px;
  box-sizing: border-box;
  background-color: #f2f2f2;
  font-size: 16px;
  color: #000000;
  padding: 0 16px;
  border: 1px solid #f2f2f2;
  border-radius: 2px;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: block;
  width: 100%;
  opacity: 0.5;
  position: relative;
  outline: none;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  disabled=""
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        disabled=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`<Input> Input style snapshots renders correctly with after 1`] = `
.c3 {
  outline: none;
  border: none;
  background-color: transparent;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  box-sizing: border-box;
  font-size: inherit;
  max-width: 100%;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c3::-moz-placeholder {
  color: #bfbfbf;
}

.c3:-ms-input-placeholder {
  color: #bfbfbf;
}

.c3::placeholder {
  color: #bfbfbf;
}

.c3::-ms-clear,
.c3::-ms-reveal {
  display: none;
}

.c6 {
  font-size: 12px;
  box-sizing: border-box;
  line-height: 10px;
  padding-left: 16px;
  padding-top: 6px;
  color: #8c8c8c;
  height: 16px;
}

.c1 {
  width: 100%;
  height: 56px;
  box-sizing: border-box;
  background-color: #f2f2f2;
  font-size: 16px;
  color: #000000;
  padding: 0 16px;
  border: 1px solid #f2f2f2;
  border-radius: 2px;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: block;
  width: 100%;
  position: relative;
  outline: none;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 8px;
  width: 24px;
  height: 24px;
}

.c5 {
  fill: currentColor;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        type="text"
        value=""
      />
    </div>
    <div
      class="c4"
    >
      <svg
        class="c5"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
  </div>
  <div
    class="c6"
  />
</div>
`;

exports[`<Input> Input style snapshots renders correctly with beforeElement 1`] = `
.c5 {
  outline: none;
  border: none;
  background-color: transparent;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  box-sizing: border-box;
  font-size: inherit;
  max-width: 100%;
  width: 100%;
}

.c5::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c5::-moz-placeholder {
  color: #bfbfbf;
}

.c5:-ms-input-placeholder {
  color: #bfbfbf;
}

.c5::placeholder {
  color: #bfbfbf;
}

.c5::-ms-clear,
.c5::-ms-reveal {
  display: none;
}

.c6 {
  font-size: 12px;
  box-sizing: border-box;
  line-height: 10px;
  padding-left: 16px;
  padding-top: 6px;
  color: #8c8c8c;
  height: 16px;
}

.c1 {
  width: 100%;
  height: 56px;
  box-sizing: border-box;
  background-color: #f2f2f2;
  font-size: 16px;
  color: #000000;
  padding: 0 16px;
  border: 1px solid #f2f2f2;
  border-radius: 2px;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: block;
  width: 100%;
  position: relative;
  outline: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  width: 24px;
  height: 24px;
}

.c3 {
  fill: currentColor;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        class="c3"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      <input
        class="c5"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="c6"
  />
</div>
`;
